--- a/guessing-game/index.html
+++ b/guessing-game/index.html
@@ -6,6 +6,13 @@
 
     <link href="./style.css" rel="stylesheet" />
 
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Press+Start+2P&family=Roboto:ital,wght@0,400;0,500;0,700;0,900;1,300&display=swap"
+      rel="stylesheet"
+    />
+
     <title>Guessing Game</title>
   </head>
   <header>
@@ -13,7 +20,7 @@
   </header>
   <body>
     <h1>Guessing My Number!</h1>
-    <p>The number is between 1 to 20</p>
+    <p class="number-range">The number is between 1 to 20</p>
     <div class="number">?</div>
     <p class="message">Start guessing...</p>
     <p class="label-score">Score: <span class="score">20</span></p>
