Add link to connect script.js

--- a/guessing-game/index.html
+++ b/guessing-game/index.html
@@ -29,5 +29,6 @@
       <input type="number" class="guess" />
       <button class="btn check">Check</button>
     </section>
+    <script src="./script.js"></script>
   </body>
 </html>
